# CardLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  devctl.ps1  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: alembic.ini
backend/app/: __init__.py  config.py  db_metadata.py  main.py
backend/app/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/bank_accounts/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/cards/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/dashboard/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/features/: __init__.py  router.py  schemas.py  service.py
backend/app/health/: __init__.py  router.py
backend/app/ingestion/: __init__.py  dedup.py  service.py  storage.py
backend/app/mail/: __init__.py  models.py  repository.py  router.py  scheduler.py  schemas.py  service.py
backend/app/parsers/: __init__.py  docintel.py  engine.py  pdf.py  profiles.py  router.py  schemas.py  service.py
backend/app/registry/: __init__.py  loader.py  matcher.py  models.py  repository.py  router.py  schemas.py  seed.py  service.py
backend/app/shared/: __init__.py
backend/app/statements/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/users/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  43328502f77f_add_bank_accounts_and_debit_cards.py  825d87de7775_mail_accounts.py  9e554a60deb6_mail_password_hints.py  a443fbd9e0b0_add_card_registry_entries.py  bc3a2b14ad20_initial_users_and_revoked_tokens.py  cede4c0d0719_initial_schema.py
backend/tests/: conftest.py  test_auth.py  test_bank_accounts.py  test_cards.py  test_config_data.py  test_dashboard.py  test_features.py  test_health.py  test_ingestion.py  test_ingestion_service.py  test_mail.py  test_masking.py  test_parsers.py  test_pdf.py  test_registry.py  test_statements.py
card_registry/: README.md
card_registry/india/axis/: magnus.json
card_registry/india/hdfc/: infinia.json
card_registry/india/sbi/: cashback.json
docs/: card_registry_schema.md
docs/architecture/: overview.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
infra/: backend.Dockerfile  deploy_azure.ps1  teardown_azure.ps1  verify_prod.ps1
postman/: README.md  cardlens.postman_collection.json  cardlens.postman_environment_local.json  cardlens.postman_environment_prod.json  cardlens.postman_environment_staging.json
scripts/: gen_certs.ps1  run_all_tests.ps1  run_backend.ps1  run_backend_mtls.ps1  run_local.ps1  run_newman.ps1  run_parser_tests.ps1  run_scheduler_once.ps1  scan_mailbox_pull.ps1  seed_registry.ps1  seed_sample_data.ps1  set_google_oauth_local.ps1  setup_local.ps1  smoke.ps1  verify_boot.ps1  verify_frontend.ps1  verify_logs.ps1  verify_mtls.ps1
(+59 files in other folders)
